# backend/internal/adapter/rest/dto/qvac/qvac_dto.go
@@ -12,12 +12,14 @@ type AuthenticationRequestDTO struct {
 type PutConfigurationRequestDTO struct {
 	EndpointURL              string                   `json:"endpoint_url"`
 	ConnectionTimeoutSeconds int                      `json:"connection_timeout_seconds"`
+	ContextSize              int                      `json:"context_size"`
 	Authentication           AuthenticationRequestDTO `json:"authentication"`
 }
 
 type ConfigurationDTO struct {
 	EndpointURL              string    `json:"endpoint_url"`
 	ConnectionTimeoutSeconds int       `json:"connection_timeout_seconds"`
+	ContextSize              int       `json:"context_size"`
 	AuthenticationType       string    `json:"authentication_type"`
 	CredentialConfigured     bool      `json:"credential_configured"`
 	UpdatedAt                time.Time `json:"updated_at"`
